--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
         "eslint-plugin-eigenspace-react": "file:src/packages/eslint-plugin-eigenspace-react",
         "eslint-plugin-eigenspace-redux": "file:src/packages/eslint-plugin-eigenspace-react",
         "eslint-plugin-eigenspace-script": "file:src/packages/eslint-plugin-eigenspace-script/dist",
+        "eslint-plugin-eigenspace-styles": "file:src/packages/eslint-plugin-eigenspace-styles/dist",
         "eslint-utils": "1.4.2",
         "google-spreadsheet": "2.0.7",
         "husky": "1.3.1",
