--- a/.travis.yml
+++ b/.travis.yml
@@ -11,10 +11,9 @@ script:
   - git checkout $TRAVIS_BRANCH
   - git remote set-url origin https://$USER:$GITHUB_API_KEY@github.com/eigen-space/codestyle.git
   - yarn lint && yarn test:ci
-  - yarn build && yarn script:extract-rules-meta-info-to-google-sheets && npm run deploy:publish;
+  - yarn build && npm run deploy:publish;
 before_install:
   - echo "//registry.npmjs.org/:_authToken=\${NPM_ACCESS_TOKEN}" > .npmrc
-  - echo "${GOOGLE_SHEETS_CREDENTIALS}" > src/scripts/credentials/google-sheets-credentials.json
 notifications:
   slack:
     rooms:
