--- a/package.json
+++ b/package.json
@@ -45,14 +45,11 @@
         "test": "jest",
         "test:ci": "yarn test --ci",
         "compile": "tsc",
-        "build": "yarn script:copy && yarn compile",
+        "build": "yarn script:copy",
         "build:subprojects": "node ./dev/scripts/build-subprojects.js",
+        "postbuild": "node ./dev/scripts/postbuild.js",
         "hooks:pre-push": "yarn lint && yarn test",
         "deploy:publish": "node node_modules/@eigenspace/helper-scripts/scripts/ci/publish.js --projectPaths[]=/,/src/packages/eslint-plugin-eigenspace-react,/src/packages/eslint-plugin-eigenspace-redux,/src/packages/eslint-plugin-eigenspace-script"
-    },
-    "dependencies": {
-        "@typescript-eslint/eslint-plugin": "1.13.0",
-        "@typescript-eslint/parser": "1.13.0"
     },
     "devDependencies": {
         "@eigenspace/commit-linter": "0.0.18",
@@ -63,11 +60,9 @@
         "@types/react-redux": "7.1.1",
         "eslint": "5.16.0",
         "eslint-plugin-eigenspace-react": "file:src/packages/eslint-plugin-eigenspace-react",
-        "eslint-plugin-eigenspace-redux": "file:src/packages/eslint-plugin-eigenspace-react",
+        "eslint-plugin-eigenspace-redux": "file:src/packages/eslint-plugin-eigenspace-redux",
         "eslint-plugin-eigenspace-script": "file:src/packages/eslint-plugin-eigenspace-script/dist",
         "eslint-plugin-eigenspace-styles": "file:src/packages/eslint-plugin-eigenspace-styles",
-        "eslint-utils": "1.4.2",
-        "google-spreadsheet": "2.0.7",
         "husky": "1.3.1",
         "jest": "24.7.1",
         "lint-staged": "8.1.5",
@@ -75,8 +70,5 @@
         "react-redux": "7.1.0",
         "ts-jest": "24.1.0",
         "typescript": "3.5.3"
-    },
-    "peerDependencies": {
-        "eslint": "5.x"
     }
 }
