--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,8 @@ script:
   - yarn lint && yarn test:ci
   - yarn build && npm run deploy:publish;
 before_install:
-  - echo "//registry.npmjs.org/:_authToken=\${NPM_ACCESS_TOKEN}" > .npmrc
+  - echo "registry=https://$REGISTRY/" >> .npmrc
+  - echo "//$REGISTRY/:_authToken=$ACCESS_TOKEN" >> .npmrc
 notifications:
   slack:
     rooms:
