#105 packages: updated eslint and ts parser version; packages/plugin-script: removed capitalization of comments rule

--- a/.eslintignore
+++ b/.eslintignore
@@ -1,3 +1,8 @@
 out-tsc/**/*
 **/dist/**/*
+**/coverage/**/*
 **/node_modules/**/*
+**/*.d.ts
+.eslintrc.js
+jest.config.js
+src/sandbox/sandbox.default.tsx
