--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,8 +11,7 @@
         ]
     },
     "include": [
-        "src",
-        "dev"
+        "src"
     ],
     "exclude": [
         "node_modules",
